[package]
name = "presenterd"
version = "0.1.0"
edition = "2024"
authors = ["Hokkaydo"]

[dependencies]
tokio = { version = "1.45.0", features = [ "time", "io-std", "macros", "rt-multi-thread" ] }
futures = "0.3.31"
env_logger = "0.11"
uuid = "1.16.0"
log = "0.4"
enigo = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = {version = "0.17.3", features = [ "bluetoothd" ] }